# cv-monorepo

./: README.md  cv_markdown.url
2018_famulous-unitygame/: README.md  demo.apk:Zone.Identifier  feature_banner.png:Zone.Identifier  icon.jpg:Zone.Identifier
2021_MLmodel-pricepredict-pyt/: README.md  environment.yml  regression.ipynb
2021_algorythmization-subject-c/: README.md
2021_bussinessanalysis-subject/: README.md  assignment.pdf:Zone.Identifier  project drive.url
2022_algorythmization_cpp/: README.md
2022_algorythmization_cpp/semestral/: CMakeLists.txt  Doxyfile  Makefile  README.md  charbjak  prohlaseni.txt  zadani.txt
2022_algorythmization_cpp/semestral/examples/cardpacks/actionpacks/: action1.txt  action2.txt  corrupt1.txt  corrupt2.txt  corrupt3.txt
2022_algorythmization_cpp/semestral/examples/cardpacks/charpacks/: char1.txt  char2.txt  corrupt1.txt
2022_algorythmization_cpp/semestral/examples/gamesaves/: sv1  sv2  sv3
2022_algorythmization_cpp/semestral/src/Core/: CApplication.cpp  CApplication.h  CCardParser.cpp  CCardParser.h  CCommand.cpp  CCommand.h  CCommandApp.cpp  CCommandApp.h  CCommandPlayer.cpp  CCommandPlayer.h  CGame.cpp  CGame.h  CInterface.cpp  CInterface.h  Reader.cpp  Reader.h  commands.cpp  commands.h  main.cpp
2022_algorythmization_cpp/semestral/src/Features/: CCard.cpp  CCard.h  CCardAction.cpp  CCardAction.h  CCardCharacter.cpp  CCardCharacter.h  CEffect.cpp  CEffect.h  CEffectAttack.cpp  CEffectAttack.h  CEffectBuff.cpp  CEffectBuff.h  CPlayer.cpp  CPlayer.h  CPlayerAI.cpp  CPlayerAI.h  CPlayerHuman.cpp  CPlayerHuman.h
(+233 files in other folders)
